--- a/7zArchiver_Dev.config
+++ b/7zArchiver_Dev.config
@@ -1,13 +1,14 @@
-#############################################################################################
-# Author:		David Geeraerts																#
-# Location:	Olympia, Washington USA															#
-# E-Mail:		dgeeraerts.evergreen@gmail.com												#
-#																							#
-#	Copyright License																		#
-# 	Creative Commons: Attribution-NonCommercial-ShareAlike 3.0 Unported (CC BY-NC-SA 3.0)	#
-# 	http://creativecommons.org/licenses/by-nc-sa/3.0/										#
-#																							#
-#############################################################################################
+###############################################################################
+# Author:	David Geeraerts
+# Location:	Olympia, Washington USA
+# E-Mail:	dgeeraerts.evergreen@gmail.com
+###############################################################################
+
+###############################################################################
+# Copyleft License(s)
+# GNU GPL (General Public License)
+# https://www.gnu.org/licenses/gpl-3.0.en.html
+###############################################################################
 
 #################################
 #	VERSIONING INFORMATION		#
@@ -20,35 +21,42 @@
 ###############################################################################
 
 # Schema version for the configuration file
-ARCHIVER_CONFIG_SCHEMA_VERSION=1.0.0
+ARCHIVER_CONFIG_SCHEMA_VERSION=3.0.0
 
-###############################################################################
-# Git Information
-# GitHub [https://github.com]
-# GitHub Repository Name: 7z_Archiver
-# HTTPS URI (for cloning)
-$GITHUB_REPOSITORY_HTTPS_URI=https://github.com/DavidGeeraerts/7z_Archiver.git
-$GITHUB_REPOSITORY_SSH=
-###############################################################################
 
 
 ###############################################################################
 # MAIN CONFIGURATION SECTION
 ###############################################################################
 
-# One Off Archive
-#	ARCHIVE_NAME: What to make into an archive
-#	i.e. D:\Mounts\Archives\research\research
+# Single Archive [name and location]
+#	ARCHIVE_NAME: What to call the archive
 #		...the name will automatically be appended with the compression method: <ARCHIVE_NAME>.7z
-#	i.e. ARCHIVE_NAME=Wiki
+#	i.e. ARCHIVE_NAME=documents
+# LOCATION can be specified --either local or network
+#	Local: i.e. D:\Storage\myArchive
+#	Network: i.e. \\MyServer\MyShare\myArchive
 ARCHIVE_NAME=
-#	ARCHIVE_SOURCE_FOLDER: What to archive (folder)
+
+#	SINGLE FOLDER ARCHIVE: What to archive (folder)
 #	i.e. ARCHIVE_SOURCE_FOLDER=D:\Workspace\ArchiveTesting
 ARCHIVE_SOURCE_FOLDER=
+
 # Bulk folder archive
 #	Will automatically create the compressed archive files in the same folder
 ARCHIVE_BULK_FOLDER=
 
+# Turn on or off BULK ARCHIVING HASHING
+# hard coded to use SHA256
+# If not needed, turn off to speed things up
+ARCHIVE_BULK_HASH=1
+
+# Bulk Archive Shipping
+# send the archive files to a different location. Delete after success.
+# Turn on or off
+ARCHIVE_BULK_SHIPPING=0
+# Location, local or remote
+ARCHIVE_BULK_DESTINATION=
 
 # ACTIONS
 #	{a: Add files to archive}
@@ -88,13 +96,16 @@ ARCHIVE_SWITCH_STRING=-r -t7z -mx5 -mtm=on -mtc=on -mta=on -mtr=on -ms=on
 
 # Log Files Settings
 #  Main script log file
+# 	DEFAULT: LOG_LOCATION=%USERPROFILE%\Documents
+#	(Leave blank for default.)
+LOG_LOCATION=
+#	DEFAULT: LOG_FILE=%SCRIPT_NAME%_%SCRIPT_VERSION%_%COMPUTERNAME%.log
+#	(Leave blank for default.)
+LOG_FILE=
 
-#	DEFAULT
-# ARCHIVE_LOG_LOCATION=%USERPROFILE%\Documents
-# ARCHIVE_LOG_FILE=%SCRIPT_NAME%_%SCRIPT_VERSION%_%COMPUTERNAME%.log
-ARCHIVE_LOG_LOCATION=
-# ONLY IF DIFFERENT FROM THE DEFAULT! OTHERWISE LEAVE BLANK
-ARCHIVE_LOG_FILE=
+# Log File shipping
+# <\\SERVER\SHARE>
+LOG_SHIPPING_LOCATION=
 
 
 ###########################################################################
@@ -104,12 +115,14 @@ ARCHIVE_LOG_FILE=
 ###########################################################################
 
 # Clean up folders after archiving is done
+#	once the folder(s) have successfully been archived, the folder(s) can
+#	can be deleted.
 #	{1 (on) | 0 (off)}
 ARCHIVE_CLEAN_UP=0
 
 # Files to exclude (Universal)
-ARCHIVE_FILE_EXCLUDE=-xr!*.tmp -xr!.DS_STORE -xr!._.DS_STORE -xr!._*
-
+#	Recommended: -xr!*.tmp -xr!.DS_STORE -xr!._.DS_STORE -xr!._* -xr!.apdisk
+ARCHIVE_FILE_EXCLUDE=-xr!*.tmp -xr!.DS_STORE -xr!._.DS_STORE -xr!._* -xr!.apdisk
 
 # FUTURE FEATURE [+]
 # LOGGING LEVEL CONTROL
@@ -121,5 +134,13 @@ LOG_LEVEL_ERROR=1
 LOG_LEVEL_FATAL=1
 LOG_LEVEL_DEBUG=0
 LOG_LEVEL_TRACE=0
+
+# Automatically set a DEBUG machine for ALL logging
+DEBUGGER_PC=
+
+# To cleanup or Not to cleanup, the variable files
+#  0 = OFF (NO)
+#  1 = ON (YES)
+VAR_CLEANUP=1
 
 ###############################################################################
