--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,6 @@
 
 7-zip\.chm\.lnk
 
-7z_Archiver_BETA\.cmd
+7zArchiver_Dev\.cmd
 
-7z_Arhiver_BETA\.config
-
-7z_Archiver_Dev\.cmd
-
-Archiver_Beta\.config
-
-Archiver_Dev\.cmd
-
-Archiver_Dev\.config
+7zArchiver_Dev\.config
